-nightfire BSP v42 compiler -compiler is a work in progress. currently has an issue with portals being clipped away from nodes as well as indices not being written to the bsp.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ _clang-format
 /hlsdk/dedicated_client/Release
 /msvc_compiler.zip
 /nasm-2.16.01-installer-x86.exe
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/.vs/bbsp_fixes
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/Debug
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/Release
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/Debug
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/Release
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/DebugEXE
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/DebugEXE
