-BSP compiler successfully builds maps! -fixed wrong texture indexing and lump issues -fix incorrect winding initialization -fix wrong value being set for child nodes in WriteDrawNodes_r -fix contents in WriteDrawLeaf -add SnapVerts -revert C++ refactor

--- a/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj
+++ b/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj
@@ -226,9 +226,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BBSP_Caller.h" />
     <ClInclude Include="brush.h" />
     <ClInclude Include="bspfile.h" />
     <ClInclude Include="bsp_structs.h" />
+    <ClInclude Include="bytepatcher.h" />
     <ClInclude Include="cmdlib.h" />
     <ClInclude Include="face.h" />
     <ClInclude Include="filelib.h" />
