--- a/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj.filters
+++ b/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="bytepatcher.h">
       <Filter>Source Files\debugging</Filter>
     </ClInclude>
+    <ClInclude Include="outside.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hooks.cpp">
@@ -163,6 +166,9 @@
     </ClCompile>
     <ClCompile Include="messages.cpp">
       <Filter>Source Files\common</Filter>
+    </ClCompile>
+    <ClCompile Include="outside.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
