--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ _clang-format
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/Release
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/DebugEXE
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/DebugEXE
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/ReleaseEXE
+/hlsdk/utils/nightfire_bbsp/bbsp_fixes/ReleaseEXE
