-brushsides with matching face vectors will now be merged together -add more verbose logging -cleanup face subdivision code

--- a/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj.filters
+++ b/hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="boundingbox.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="merge.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hooks.cpp">
@@ -172,6 +175,9 @@
     </ClCompile>
     <ClCompile Include="blockmem.cpp">
       <Filter>Source Files\common</Filter>
+    </ClCompile>
+    <ClCompile Include="merge.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
