--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ _clang-format
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/DebugEXE
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/bbsp_fixes/ReleaseEXE
 /hlsdk/utils/nightfire_bbsp/bbsp_fixes/ReleaseEXE
+/patreon_images
